--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">YandexImageSearchEngine</string>
     <string name="hint_search">search</string>
     <string name="image">Изображение</string>
-    
+
+    <string name="action_open_origin_image">Открыть оригинал</string>
+    <string name="action_open_origin_image_source">Источник</string>
+
     <string name="yandex_bot_error">К сожалению яндекс ограничил доступ к источнику изображения с текущего IP</string>
     <string name="other_images_not_found">Другие изображения не найдены</string>
     <string name="images_load_failed">Не удалось загрузить изображения</string>
