--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,12 +15,13 @@
     <string name="images_load_failed">Не удалось загрузить изображения: </string>
     
     <!-- Error messages info -->
-    <string name="server_invalid_response">Получен сервер отправил некорректный ответ</string>
+    <string name="server_invalid_response">Сервер отправил некорректный ответ</string>
     <string name="could_not_find_image_real_source">Не удалось найти реальный источник изображения</string>
     <string name="response_is_not_success">Response code: %1$s</string>
     <string name="server_is_not_responding">Не удалось получить результат от сервера.
         Проверьте подключение к интернету.</string>
     <string name="need_enter_captcha">Требуется ввести капчу</string>
+    <string name="unexpected_error">Произошла непредиденная ошибка</string>
 
     <!-- Captcha -->
     <string name="captcha">Капча</string>
