--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="yandex_bot_error">К сожалению яндекс ограничил доступ к источнику изображения с текущего IP</string>
     <string name="other_images_not_found">Другие изображения не найдены</string>
     <string name="images_load_failed">Не удалось загрузить изображения: </string>
+    <string name="image_load_failed">Не удалось загрузить изображение: %s</string>
     
     <!-- Error messages info -->
     <string name="server_invalid_response">Сервер отправил некорректный ответ</string>
@@ -30,5 +31,10 @@
     <string name="info_for_entering_captcha">Используйте строчные и прописные буквы, знаки препинания. Между словами поставьте пробел.</string>
     <string name="error_message_enter_captcha">Неверно, попробуйте ещё раз!</string>
     <string name="failed_captcha_upload">Не удалось отобразить капчу</string>
+
+    <!-- Image actions -->
+    <string name="action_open_in_other_app">Открыть в…</string>
+    <string name="action_share">Отправить</string>
+    <string name="action_download">Скачать</string>
 
 </resources>
