--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,9 @@
     <string name="action_share">Отправить</string>
     <string name="action_download">Скачать</string>
 
+    <!-- Menu actions -->
+    <string name="search_by_image">Поиск по изображению</string>
+    <string name="pick_image">Выбрать изображение</string>
+    <string name="take_photo">Сделать фото</string>
+
 </resources>
